tests/invalid/abs_non_numeric/main.py
def run_case() -> None:
    x: bool = True

    y: int = abs(x)

if __name__ == "__main__":
    run_case()
